<resources>
    <string name="app_name">pr4_layouts</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre (*)</string>
    <string name="apellido">Apellido (*)</string>
    <string name="email">E-mail (*)</string>
    <string name="mensaje">Mensaje</string>
    <string name="subcribirse">Subcribirse por e-mail</string>
    <string name="h1">elpais.es</string>
    <string name="texto">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
        Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500,
        cuando un impresor (N. del T.<a href="">persona que se dedica</a> a la imprenta) desconocido usó una galería de textos y los mezcló
        de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como
        texto de relleno en documentos electrónicos, quedando esencialmente igual al original.<a href="">Fue popularizado</a>  en los 60s con
        la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de
        autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
